# pem

./: .buildinfo  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  about.html  about_benefit_index.html  about_conflict_index.html  about_risk_index.html  about_upg.html  api.html  api_benefit.html  api_conflict.html  api_project.html  api_publish.html  api_risk.html  badge_source.html  development.html  dummy.html  genindex.html  index.html  logo.html  objects.inv  py-modindex.html  pyproject.toml  risk.html  search.html  searchindex.js  sphinx-reading-durations.json  usage.html  usage_benefit.html  usage_conflict.html  usage_groups.html  usage_groups_habitats.html  usage_groups_users.html  usage_project.html  usage_risk.html
.doctrees/: about.doctree  about_benefit_index.doctree  about_conflict_index.doctree  about_risk_index.doctree  about_upg.doctree  api.doctree  api_benefit.doctree  api_conflict.doctree  api_project.doctree  api_publish.doctree  api_risk.doctree  badge_source.doctree  development.doctree  dummy.doctree  environment.pickle  index.doctree  logo.doctree  risk.doctree  usage.doctree  usage_benefit.doctree  usage_conflict.doctree  usage_groups.doctree  usage_groups_habitats.doctree  usage_groups_users.doctree  usage_project.doctree  usage_risk.doctree
.doctrees/includes/: ipsum.doctree  project_layout.doctree  warning_dev.doctree
.doctrees/includes/examples/: benefit_get_benefit.doctree  case_setup_habitats.doctree  case_setup_users.doctree  conflict_get_conflict.doctree  conflict_matrix.doctree  conflict_setup_matrix.doctree  project_setup_habitats.doctree  project_setup_project.doctree  project_setup_roi.doctree  project_setup_users.doctree  risk_get_risk.doctree  risk_setup_hra.doctree
.github/workflows/: docs.yaml  style.yaml  tests.yaml
_modules/: index.html
_modules/copyme/: module.html
_modules/copyme/mypackage/: submodule.html
_modules/pem/: benefit.html  conflict.html  module.html  project.html  publish.html  risk.html
_sources/: about.rst.txt  about_benefit_index.rst.txt  about_conflict_index.rst.txt  about_risk_index.rst.txt  about_upg.rst.txt  api.rst.txt  api_publish.rst.txt  api_risk.rst.txt  badge_source.rst.txt  development.rst.txt  dummy.md.txt  index.rst.txt  logo.rst.txt  usage.rst.txt  usage_benefit.rst.txt  usage_groups.rst.txt  usage_groups_users.rst.txt  usage_project.rst.txt  usage_risk.rst.txt
_sources/includes/: project_layout.rst.txt  warning_dev.rst.txt
_sources/includes/examples/: benefit_get_benefit.rst.txt  case_setup_habitats.rst.txt  case_setup_users.rst.txt  conflict_get_conflict.rst.txt  conflict_setup_matrix.rst.txt  project_setup_project.rst.txt  project_setup_roi.rst.txt
dev/: checkout.py  docs.py  style.py  tests.py
docs/: about.rst  about_benefit_index.rst  about_risk_index.rst  about_upg.rst  api.rst  api_benefit.rst  api_conflict.rst  api_project.rst  conf.py  development.rst  docs_update.py  index.rst  risk.rst  usage.rst  usage_conflict.rst  usage_groups_habitats.rst  usage_project.rst
docs/data/: docs.txt
docs/includes/: project_layout.rst
docs/includes/examples/: conflict_get_conflict.rst  conflict_matrix.rst  conflict_setup_matrix.rst  project_setup_habitats.rst  project_setup_project.rst  project_setup_users.rst  risk_get_risk.rst  risk_setup_hra.rst
examples/: examples_01.ipynb
includes/: ipsum.html  project_layout.html  warning_dev.html
includes/examples/: benefit_get_benefit.html  case_setup_habitats.html  case_setup_users.html  conflict_get_conflict.html  conflict_matrix.html  conflict_setup_matrix.html  project_setup_habitats.html  project_setup_project.html  project_setup_roi.html  project_setup_users.html  risk_get_risk.html  risk_setup_hra.html
src/copyme/: __init__.py  module.py
src/copyme/data/: src_data.txt
src/copyme/mypackage/: __init_.py  submodule.py
src/pem/: __init__.py  benefit.py  conflict.py  module.py  performance.py  project.py  publish.py  risk.py
tests/: conftest.py  test_doctest.py
tests/bcmk/: master_tester.py  project_tester.py  risk_tester.py  test_bcmk_module.py
tests/data/: test_data.csv
tests/unit/: test_module.py
